@@ -1,3 +1,9 @@
+2002-12-11	Ujwal S. Sathyam <ujwal@setlurgroup.com>
+
+    * Removed keyDown code from PsudoTerminal. 
+      First responder is TEXTVIEW.
+
+
 2002-12-11	fabian
     * Changed/Added several shortcut keys:
       command-left and right arrow: pre/next session
